# Transcriber

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.test  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_foundation.py  0002_transcripts_and_exports.py  0003_model_registry.py  0004_provider_definitions.py  0005_provider_operations.py  0006_ai_processing.py  0007_reports.py  0008_size_columns_bigint.py  0009_ai_run_progress.py  0010_transcript_editor_operations.py  0011_media_derivatives_retention.py  0012_schema_reconciliation.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  (+4 more)
backend/tests/: conftest.py  test_ai_runs.py  test_bootstrap.py  test_caddy_proxy_config.py  test_celery_config.py  test_ci_configuration.py  test_diarization.py  test_exports.py  test_exports_extended.py  test_external_transcription.py  test_hf_speech_providers.py  test_media.py  test_media_derivatives.py  test_migrations.py  test_migrations_postgres.py  test_model_manager.py  test_model_routing.py  test_models_package.py  test_operational_hardening.py  test_post_processing.py  test_projects_admin.py  test_provider_registry.py  test_provider_secrets.py  test_report_exports.py  test_report_templates.py  test_reports_api.py  test_retention.py  test_roles_admin.py  test_routes_smoke.py  test_security_tokens.py  test_startup_baseline.py  test_transcript_editor.py  test_worker_container.py  test_worker_probe.py
(+137 files in other folders)
